:bug: text wrapped

--- a/src/common/css/styles.css
+++ b/src/common/css/styles.css
@@ -260,6 +260,7 @@ textarea {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  word-wrap: break-word;
 }
 
 .todoListElem textarea {
